<resources>
    <string name="app_name">Exercise 1</string>
    <string name="var1">ini pesan</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">LOGIN</string>
    <string name="bdaftar">Belum Terdaftar?</string>
    <string name="btnDaftar">Daftar</string>
    <string name="tLogin">LOGIN</string>
    <string name="txemail">Hasil Email</string>
    <string name="txpassword">Hasil password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Pendaftaran</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Lihat Nomor</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="btnBatal">Batal</string>
    <string name="todo">TODO</string>
</resources>